--- a/index.html
+++ b/index.html
@@ -65,10 +65,29 @@
             <div class="row"></div>
         </section>
 
+        <section class="container" id="Education">
+            <div class="row">
+                <h2 id="edu-text" class="display-2">Education</h2>
+            </div>
+            <div class="row">
+                <div class="education">
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <div class="row"><h2 class="display-2">Skills</h2>
+            </div>
+            <div class="row">
+                <div class="skils">
+                    
+                </div>
+            </div>
+            </section>
 
 
-        <section class="container"><h2 class="display-2"></h2></section>
-        <section class="container"><h2 class="display-2"></h2></section>
+
+
         <section class="container"><h2 class="display-2"></h2></section>
         <section class="container"><h2 class="display-2"></h2></section>
         <section class="container"><h2 class="display-2"></h2></section>
